# cairn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPECIFICATION.md  _index.json  cairn_cli.py  package.json  pyproject.toml
.github/workflows/: ci.yml
RFC/: 0001-cairn-core.md  0002-agent-skills-companion.md  0003-version-stability.md  0004-merge-engine.md  0005-uri-security-model.md
assets/: cairn-logical-evolution-of-okf.md  knowledge-formats-okf-vs-cairn.md
docs/corpus/: EVALUATION.md
docs/security/: THREAT_MODEL.md
examples/: database.md  inferred-relation.md  service.md
js/: cairn.js  test-vectors.js
migration-guides/: project-analysis.md
reports/: CAIRN_AUDIT_20260620T143738Z.md
schemas/: __init__.py  agent-skill.md  audit-report.md  audit-rubric.md  migration-report.md  rfc.md  schema.md  specification.md
skills/: README.md  cairn-project-migration.md  cairn-report-writing.md
skills/cairn-project-migration/: SKILL.md
test-vectors/: compliance-vectors.json  hash-vectors.json  merge-vectors.json
tests/: test_cairn_tools.py
tools/: __init__.py
tools/auditor/: README.md  __init__.py  audit.py
tools/corpus/: __init__.py  evaluate.py
tools/index/: README.md  __init__.py  index.py
tools/merge/: __init__.py  merge.py
tools/project-agent/: AGENT.md  README.md  cairnize.py
tools/project_agent/: __init__.py  cairnize.py
tools/reference-parser/: README.md  parser.py  parser.ts
tools/reference_parser/: __init__.py
tools/report-agent/: AGENT.md  README.md
tools/validate/: README.md  __init__.py  validate.py
(+18 files in other folders)
